# story-engine

./: .env  .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENTS.senior_architect.md  AGENTS.story_engineer.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  ORACLE_CONNECTION_FIXED.md  PR-REVIEW-RESOLUTIONS.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  STANDARDIZED_LLM_IMPLEMENTATION.md  SYSTEM_ARCHITECTURE.md  T R A N S C R I P T.txt  apex_analysis.md  apex_dashboard_design.md  apex_integration_plan.py  chat_export.txt  config.yaml  decisions.yaml  diagnose_oracle_connection.py  docker-compose.oracle.yml  docker-compose.yml  fix_exceptions.py  fix_oracle_connection.py  generation_error_20250904_020840.json  generation_error_20250904_021116.json  generation_error_20250904_102804.json  generation_error_20250904_102854.json  lb_metrics.ndjson  llm_config.json  llm_observability_source.txt  model_evaluation_summary.md  (+22 more)
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: cache_engineer.md  docs_ci_writer.md  engine_integrator.md  orchestrator_refactorer.md  security_engineer.md  templates_curator.md  tooling_engineer.md  validation_engineer.md
.github/workflows/: agent_handoff.yml  bootstrap_poml_overhaul.yml  ci.yml  e2e.yml  e2e_acceptance.yml  e2e_build.yml  golden.yml  nightly_aggregate.yml  oracle-tests.yml  oracle_healthcheck.yml  orchestrator.yml  release.yml  silver.yml  tailscale.yml  tests-fast.yml  tests.yml  unit.yml
_archive/core_archive/: character_simulation_engine_v2.py  complex_group_dynamics.py  llm_orchestrator_old.py  multi_character_simulation.py
_archive/tests_archive/: advanced_experiment.py  cache_manager.py  dramatic_emotional_journey.py  experiment.py  gemma2_only_simulation.py  gemma2_simulation.py  gemma_emotional_sequence.py  interactive_experiment.py  kobold_config_test.py  launch_kobold_and_test.py  lmstudio_setup_guide.py  quick_feedback.py  quick_gemma_test.py  real_character_simulation.py  real_llm_emotional_sequence.py  test_character_simulation.py  test_enhancement.py  test_gemma2_explicit.py  test_gemma_model.py
agents/: README.md  cache_engineer.md  docs_ci_writer.md  engine_integrator.md  orchestrator_refactorer.md  security_engineer.md  templates_curator.md  tickets.yml  tooling_engineer.md  validation_engineer.md
core/character_engine/: character_simulation_engine_v2.py  complex_group_dynamics.py  meta_narrative_pipeline.py  multi_character_simulation.py
core/common/: cli_utils.py  config.py  dotenv_loader.py  logging.py  result_store.py
core/domain/: models.py
core/orchestration/: llm_orchestrator.py  orchestrator_loader.py
core/storage/: database.py
core/story_engine/: iterative_story_system.py  narrative_pipeline.py  scene_bank.py  story_arc_engine.py  story_engine_orchestrated.py  story_enhancement_loop.py  world_state.py  world_state_manager.py
db/: README.md  apply_schema.py  grants.sql  schema.sql  sync_providers_models.py
deploy/: docker-compose.yml
deploy/compose/: docker-compose.full.yml  docker-compose.mq.yml
docs/: AGENTS_WORKFLOW.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_IMPROVEMENT_PLAN_MILESTONE2.md  MODULES.md  MODULES_L4.md  REPO_MAP.md  REPO_MAP_L4.md  REPO_MAP_LITE.md  ai-lb-integration.md  cli.md  demo-guide.md  e2e-build.md  env.schema.md  events_schema.md  hpq_pipeline.md  messaging.md  observability.md  pipeline_roadmap.md  repo-map.L4.json  repo-map.json  repo-map.temp.json  storyctl.md
docs/observability/: baseline.md  db_sli_slo.md  env_and_logging.md  error_taxonomy.md  metrics_events.md  repro_harness.md
docs/oracle/: local_dev.md  tns_alias.md  (+1 more)
examples/: autonomous_agent_usage_example.py  autonomous_persona_demonstration.py  standardized_llm_migration_example.py
feedback/: meta_pipeline_result.json  pilate_md_sim.json  pilate_sim_from_bank.json  pilate_simulation_result.json
poml/: INTEGRATION_GUIDE.md  README.md  TEMPLATE_MAPPING.md
pontius-pilate-screenplay/: README.md  pontius_pilate_screenplay.txt
scene_bank/: pilate_md_scenes.json  pilate_scenes.json
scripts/: .last_model_used  aggregate_generation_errors.py  aggregate_healthcheck.py  build_scene_bank.py  check_enhancement_fallback.py  choose_model.py  create_character_persona.py  cx-tasks  db_health.py  db_smoke_test.py  discover_remote_models.py  evaluate_poml.py  evaluate_poml_storytelling.py  evaluate_storytelling_model.py  evaluate_two_stage_pipeline.py  fix_extraneous_fstrings.py  hpq_ab.py  lint_poml_self_contained.py  newpy  oracle_healthcheck.py  refine_world_state.py  repo_map.py  repro_harness.py  resume_oracle_db.py  run-live-poc.sh  run-tests.ps1  run-tests.sh  run_cluster_story.sh  run_iterative_persona.py  run_meta_pipeline.py  run_pilate_simulation.py  setup_oracle_wallet.py  simulate_from_scene_bank.py  start_cloud_sql_proxy.ps1  start_cloud_sql_proxy.py  sync_lmstudio_omnibus_env.py  venv-create.sh
tasks/: todo.md
tests/: __init__.py  conftest.py  mock_detection_focused.py  test_agents_loader.py  test_autonomous_agent_breaking_points.py  test_breaking_points_simplified.py  test_database.py  test_db_smoke.py  test_db_validator.py  test_demo_runner.py  test_engine_dag.py  test_engine_idempotency_sqlite.py  test_enhancement_fallback_fast.py  test_full_pontius_pilate_poml.py  test_golden_parallel.py  test_inmemory_messaging_pipeline.py  test_kobold_circuit.py  test_kobold_retry.py  test_live_pilate_poml.py  test_lmstudio_circuit.py  test_logging_config.py  test_messaging_bus.py  test_metrics_events.py  test_narrative_engine_adapter.py  test_no_extraneous_fstrings.py  test_oracle_health_stub.py  test_oracle_healthcheck_integration.py  test_oracle_retry.py  test_orchestrated_cache.py  test_orchestrated_poml_integration.py  test_orchestrated_profiles.py  test_orchestrator.py  test_orchestrator_loader.py  test_output_authenticity_audit.py  test_pilate_settings_propagation.py  test_pipeline_logging.py  test_pipeline_smoke.py  test_poml_adapter.py  test_poml_adapter_extended.py  test_poml_cli_smoke.py  (+8 more)
(+203 files in other folders)
