[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "story-engine"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "oracledb>=3.3.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["uv","pytest","black","ruff","setuptools>=67","wheel"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv",
    ".ruff_cache",
    "dist",
    "_archive",
    "examples",
    "scripts",
    "db",
    "apex_integration_plan.py",
]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Allow long lines in this implementation file for now; will refactor later.
"src/story_engine/core/core/character_engine/character_simulation_engine_v2.py" = ["E501"]
"src/story_engine/core/core/character_engine/complex_group_dynamics.py" = ["E501"]
"src/story_engine/core/core/character_engine/meta_narrative_pipeline.py" = ["E501"]
"src/story_engine/core/core/character_engine/multi_character_simulation.py" = ["E501"]
"src/story_engine/core/core/orchestration/llm_orchestrator.py" = ["E501"]
"src/story_engine/core/core/messaging/testutils.py" = ["E501"]
"src/story_engine/core/core/orchestration/autonomous_persona_agents.py" = ["E501"]
"src/story_engine/core/core/orchestration/standardized_llm_interface.py" = ["E402"]
"tests/*.py" = ["E501"]
"src/story_engine/poml/poml/lib/poml_integration.py" = ["E501"]

#[tool.ruff.lint.per-file-ignores]
# (No per-file ignores; demo_prompt.py refactored to avoid E402.)
